# Studyglib

./: .gitignore  LICENSE  README.md
GModuleEx/: CMakeLists.txt
GModuleEx/example/: CMakeLists.txt  main.cpp
GModuleEx/include/: Logger.hpp  mylibrary.hpp
GModuleEx/src/: CMakeLists.txt  mylibrary.cpp
HelloGstreamer/: CMakeLists.txt  README.md
HelloGstreamer/src/: CMakeLists.txt  main.cpp
